--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@hookform/resolvers": "^3.8.0",
     "@neondatabase/serverless": "^0.9.4",
     "@prisma/client": "^5.16.1",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.50.1",
+    "@tanstack/react-table": "^8.19.2",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
