--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "pg": "^8.12.0",
     "postgres": "^3.4.4",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-currency-input-field": "^3.8.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
