--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-papaparse": "^4.4.0",
     "react-select": "^5.8.0",
     "react-use": "^17.5.0",
+    "recharts": "^2.12.7",
     "resend": "^3.4.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
