--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
     "postgres": "^3.4.4",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-currency-input-field": "^3.8.0",
